--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-aop</artifactId>
 </dependency>
+
+        <dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.2</version>
+		</dependency>
   
     <dependency>
       <groupId>junit</groupId>
