--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/Users/daisy/Desktop/apache-tomcat-7.0.96/lib/servlet-api.jar"/>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
