--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.0.0.RELEASE</version>
+    
 </parent>
 
   <dependencies>
@@ -60,6 +61,13 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+  
+  <dependency>
+    <groupId>javax.websocket</groupId>
+    <artifactId>javax.websocket-api</artifactId>
+    <version>1.0</version>
+    <scope>provided</scope>
+</dependency>
   
     <dependency>
       <groupId>junit</groupId>
