--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,22 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>             
+	       <groupId>org.apache.tomcat.maven</groupId>
+	       <artifactId>tomcat7-maven-plugin</artifactId>
+	       <version>2.2</version>
+	       <configuration>
+
+	       <server>tomcat7</server>
+	       <username>admin</username>
+	       <password>admin</password>
+	       <path>/</path>
+	       <port>8080</port>
+	 
+	       
+	       </configuration>
+	       
+	       </plugin>
             
    </plugins>      
   </build>
